@@ -64,6 +64,11 @@ httpclient.proxy-autodetect=true
 #filecomparer.ignore-panic-dir-placeholders=true
 
 ###
+# XML Parsing properties
+###
+xmlparser.sanitize-listings=true
+
+###
 # Encryption Algorithm
 #
 # Note that some cryptography options will only be available
